--- a/app/src/main/res/layout/post_child.xml
+++ b/app/src/main/res/layout/post_child.xml
@@ -13,6 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
+        android:background="?attr/background_color"
         android:padding="10dp">
 
         <TextView
@@ -20,7 +21,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
-            android:textColor="@color/dark"
+            android:textColor="?attr/text_color"
             android:textStyle="bold" />
 
         <TextView
@@ -28,7 +29,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
-            android:textColor="@color/dark"
+            android:textColor="?attr/text_color"
             android:textSize="16sp"
             android:textStyle="bold" />
 
@@ -38,7 +39,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:justificationMode="inter_word"
-            android:textSize="14sp" />
+            android:textSize="14sp"
+            android:textColor="?attr/text_color"/>
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -51,21 +53,24 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/ic_down"
-                android:layout_alignParentStart="true"/>
+                android:layout_alignParentStart="true"
+                app:tint="?attr/button_color"/>
 
             <ImageView
                 android:id="@+id/iv_vote_up"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/ic_up"
-                android:layout_centerInParent="true"/>
+                android:layout_centerInParent="true"
+                app:tint="?attr/button_color"/>
 
             <ImageView
                 android:id="@+id/iv_bookmark"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/ic_bookmark"
-                android:layout_alignParentEnd="true"/>
+                android:layout_alignParentEnd="true"
+                app:tint="?attr/button_color"/>
 
         </RelativeLayout>
     </LinearLayout>
